# MyOwnDesk

./: .gitignore  Cargo.toml  README.md  client.toml  relay.toml
docs/: Ticket-01 技术分析.md  Ticket-02 技术分析.md  Ticket-03 技术分析.md  Ticket-04 技术分析.md  Ticket-05 技术分析.md  Ticket-06 技术分析.md  spec.md  ticket-08-analysis.md  tickets.md  架构技术决策.md  需求分析.md
docs/adr/: 0001-video-frame-fragmentation.md
myowndesk-client/: Cargo.toml  client.toml
myowndesk-client/src/: capture.rs  config.rs  decoder.rs  encoder.rs  gui.rs  input.rs  keymap.rs  lib.rs  main.rs  net.rs  service.rs
myowndesk-protocol/: Cargo.toml  build.rs
myowndesk-protocol/src/: crypto.rs  fragment.rs  lib.rs
myowndesk-protocol/src/proto/: messages.proto
myowndesk-relay/: Cargo.toml  relay.toml
myowndesk-relay/src/: auth.rs  config.rs  lib.rs  main.rs  relay.rs  server.rs
myowndesk-relay/tests/: relay_test.rs
