[package]
name = "myowndesk-client"
version = "0.1.0"
edition = "2021"

[dependencies]
myowndesk-protocol = { path = "../myowndesk-protocol" }
tokio = { version = "1", features = ["full"] }
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
]}
windows-service = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
openh264 = { version = "0.9", features = ["source"] }
libc = "0.2"
thiserror = "1"
quinn = "0.11.11"
ring = "0.17.14"
hex = "0.4.3"
prost = "0.13"
bytes = "1.12.1"
serde = { version = "1.0.229", features = ["derive"] }
toml = "1.1.3"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }

# GUI (Ticket-06) — minimal framebuffer window, no native build deps
minifb = "0.27"

[dev-dependencies]
tempfile = "3.27.0"
