[package]
name = "myowndesk-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
myowndesk-protocol = { path = "../myowndesk-protocol" }
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
ring = "0.17"
prost = "0.13"
bytes = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rand = "0.8"
hex = "0.4"
constant_time_eq = "0.3"
rcgen = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"
bytes = "1"
prost = "0.13"
myowndesk-protocol = { path = "../myowndesk-protocol" }
